--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_kategorie_default.html
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/template_kategorie_default.html
@@ -5,7 +5,7 @@
     <meta name="robots" content='index'>
     <meta name="description" content='[Beschreibung]'>
     <meta name="keywords" content='[EAN], [ArtNr], [Bezeichnung]'>
- 
+    <!-- for IPhone -->
     <meta name="viewport" content="width=320" />
 
     [EMBED:template_[CATEGORYNAME]_head.htm]
