--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/landSelection.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/landSelection.htm
@@ -1,7 +1,5 @@
-your Country: 
-<a href="default.aspx?l=AT&language=DEU">
-<img src="../images/icons/flag_austria.png" alt="German" border=0 
-    style="width: 24px"/></a>
-<a href="default.aspx?language=ENG" >
-<img src="../images/icons/flag_GB.png" alt="England"  style="width: 24px" border=0/></a>
+Your Country: <a href="default.aspx?l=AT&language=DEU">
+    <img src="../images/icons/flag_austria.png" alt="German" border="0" style="width: 24px" /></a>
+<a href="default.aspx?language=ENG">
+    <img src="../images/icons/flag_GB.png" alt="England" style="width: 24px" border="0" /></a>
 <!--<a href="default.aspx?l=US&language=ENG"><img src="../images/icons/flag_usa.png" alt="USA" border=0/></a>-->
