--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/languageSelection.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_mobile/pages/languageSelection.htm
@@ -1,3 +1,3 @@
-Sprache/language: 
+Sprache/Language: 
 <a href="default.aspx?language=DEU">Deutsch</a>
 <a href="default.aspx?language=ENG">English</a>
