--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_tool.htm
@@ -143,16 +143,15 @@ div.Section1
 								<td nowrap width="369">
 								
 								<p align="right">
-								<font color="#db0f21" size="5">
-								<b>
-								<a href="default.asp?ArtNr=10756">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-1.gif"></a></b></td>
+								<b><font color="#db0f21" size="5">
+								<a href="default.asp?ArtNr=10908">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/11-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left">
-								<font color="#db0f21" size="5">
 								<b>
-								<a href="default.asp?ArtNr=10757">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-2.gif"></a></b></td>
+								<font color="#db0f21" size="5">
+								<a href="default.asp?ArtNr=10910">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/11-2.gif"></a></b></td>
 									</b>
 									</tr>
 									<tr>
@@ -275,13 +274,13 @@ div.Section1
 								
 								<p align="right"><b>
 								<font color="#db0f21" size="5">
-								<a href="default.asp?ArtNr=231">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/0.gif"></a></b></td>
+								<a href="default.asp?ArtNr=10756">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-1.gif"></a></b></td>
 								<td nowrap width="312">
 								<p align="left"><b>
 								<font color="#db0f21" size="5">
-								<a href="default.asp?ArtNr=231">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/0.gif"></a></b></td>
+								<a href="default.asp?ArtNr=10757">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/tool/3-2.gif"></a></b></td>
 									</tr>
 									<tr>
 								<td nowrap width="369">
