--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/banner_auktion.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/banner_auktion.htm
@@ -1,1 +1,2 @@
-<a href="default.aspx?ArtNr=903"><img border="0" src="../images/banners/xmas_special_2012.gif" alt="Weihnachstauktion 2012"/></a>
+<a href="default.aspx?ArtNr=903">
+<img border="0" src="../images/banners/xmas_special_2012.gif" alt="Weihnachstaktion 2012"/></a>
