--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/function2.htm
@@ -45,10 +45,10 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 							<br>
 							<b><font color="#E00F22">
 							<span style="font-family: Verdana">new catalogue</span></font></b><br>
-							<a href="/download/arfaian_katalog_2012.zip" target="_blank">
-								<img border="0" src="http://www.arfaian.com/download/Arfaian_Katalog_2012.gif" vspace="1" width="150" height="212"></a><br>
+							<a href="/katalog_2013.htm" target="_blank">
+								<img border="0" src="http://www.arfaian.com/download/Arfaian_Katalog_2013.gif" vspace="1" width="150" height="212"></a><br>
 							<b><font color="#E00F22">
-							<span style="font-family: Verdana">download now!<br>
+							<span style="font-family: Verdana"><br>
 							<br>
 							<br>
 							</span></font></b>
@@ -153,8 +153,8 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 							<tr>
 								<td height="18">
 								<p align="center">
-		<a href="default.asp?ArtNr=1623">
-					<img border="0" src="../images/boxes/1.gif"></a></td>
+		<a href="default.asp?ArtNr=1343">
+					<img border="0" src="../images/boxes/6.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="18">
@@ -165,20 +165,20 @@ BODY{font:x-small 'Verdana';margin-right:1.5em}
 							<tr>
 								<td height="10">
 								<p align="center" style="margin-top: 0; margin-bottom: 0">
-		<a href="default.asp?ArtNr=894">
-					<img border="0" src="../images/boxes/6.gif"></a></td>
+		<a href="default.asp?ArtNr=1623">
+					<img border="0" src="../images/boxes/1.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="18">
 								<p align="center">
-		<a href="default.asp?ArtNr=10087">
-					<img border="0" src="../images/boxes/3.gif"></a></td>
+		<a href="default.asp?ArtNr=10917">
+					<img border="0" src="../images/boxes/2.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="10">
 								<p align="center">
-		<a href="default.asp?ArtNr=10599">
-					<img border="0" src="../images/boxes/2.gif"></a></td>
+		<a href="default.asp?ArtNr=10087">
+					<img border="0" src="../images/boxes/3.gif"></a></td>
 							</tr>
 							<tr>
 								<td height="10">
