--- a/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
+++ b/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/template_grip.htm
@@ -152,14 +152,14 @@ div.Section1
                                 <p align="right">
 								<b>
 									<font color="#db0f21" size="5">
-								<sub><a href="default.asp?ArtNr=10567">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/1.gif"></a></sub></font></b></td>
+									<a href="default.asp?ArtNr=10998">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/8.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
-									<sub><a href="default.asp?ArtNr=10748">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2.gif"></a></sub></font></b></td>
+									<a href="default.asp?ArtNr=1161">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2-1.gif"></a></font></b></td>
 									</tr>
 									<tr>
 								<b>
@@ -168,13 +168,13 @@ div.Section1
                                 <p align="right">
 								<b>
 									<font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=10384">
+									<a href="default.asp?ArtNr=11017">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/3.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
 									<font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=10394">
+									<a href="default.asp?ArtNr=1223">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/4.gif"></a></font></b></td>
 								</font></b>
 									</tr>
@@ -201,14 +201,40 @@ div.Section1
 								<td align="center" width="495">
                                 <p align="right">
 								<b><font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=10381">
+									<a href="default.asp?ArtNr=11010">
 					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/7.gif"></a></font></b></td>
 								<td align="center" width="489">
                                 <p align="left">
 								<b>
+								<b>
 									<font color="#db0f21" size="5">
-									<a href="default.asp?ArtNr=10734">
-					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2-1.gif"></a></font></b></td>
+									<sub><a href="default.asp?ArtNr=10748">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/2.gif"></a></sub></font></b></b></td>
+								</font></b>
+									</tr>
+									<tr>
+								<td align="center" width="495">
+                                <p align="right">
+								<b>
+									<font color="#db0f21" size="5">
+								<sub><a href="default.asp?ArtNr=10567">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/1.gif"></a></sub></font></b></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<b>
+									<font color="#db0f21" size="5">
+									<sub><a href="default.asp?ArtNr=10873">
+					<img border="0" src="skins/skin_arfaian_2009/images/start/grip/9.gif"></a></sub></font></b></td>
+									</tr>
+									<tr>
+								<b>
+									<font color="#db0f21" size="5">
+								<td align="center" width="495">
+                                <p align="right">
+								<font color="#FFFFFF">66</font></td>
+								<td align="center" width="489">
+                                <p align="left">
+								<font color="#FFFFFF">66</font></td>
 								</font></b>
 									</tr>
 									</table>
