--- a/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/productPage_part_common.htm
+++ b/trunk/IntraSell_WebShop_2008/WebShop_2008/skins/skin_arfaian_2009/pages/productPage_part_common.htm
@@ -66,16 +66,19 @@
 							 
 								<tr>
 									<td width="30%" class="style2">
+                                    <!-- 
                                      <div  id="Listenpreis1" > 
                                      <b>[TRANSLATION:Listenpreis]:</b>
-                                     </div>
+                                     </div>-->
 									</td>
 									<td width="70%" class="style2">
+                                    <!-- 
                                     <div  id="Listenpreis" > 
 									    <p align="right"><font size="2"><b>
 									    <font face="Verdana" color="#DB0F21" size="1">
 									    € [makeBruttoPreisList]</font></b></font> </p>
                                   </div>
+                                  -->
 									</td>
 								</tr>
                               
